--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title>Blank App</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="cordova.js"></script>
-    </body>
+<head>
+<meta charset="UTF-8"/>
+<title>Space Shooter</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
+
+	<link rel="manifest" href="appmanifest.json" />
+	<link rel="icon" type="image/png" href="icons/icon-512.png" />
+
+<link rel="stylesheet" href="style.css"/>
+
+</head>
+<body>
+<div id="fb-root"></div>
+	<script src="opus.js"></script>
+<script src="c2runtime.js"></script>
+<script src="start.js"></script>
+	<script src="register-sw.js"></script>
+</body>
 </html>
